conf: profile bazlı config (local/prod), gizlileri ENV'e taşı